# ask_nenaprasno_bot

./: .dockerignore  .editorconfig  .env  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  bot.py  bot_persistence_file  config.py  docker-compose.mysql.yaml  docker-compose.yaml  main.py  persistence.binary  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: bot_productivity.yaml  check_vulnerabilities.yaml  codestyle_pep8.yaml  deploy.yaml  deploy_prod.yaml  deploy_production.yaml  deploy_stage.yaml  deploy_test.yaml  infrastructure_copy.yaml
Bot/: .env.example  requirements.txt
Bot/src/: bot.py  bot_keyboards.py  main.py  run_bot.py  run_webhook_api.py  server.py  settings.py
constants/: callback_data.py  command_constants.py  url_paths.py
docs/: bot_architecture.drawio  howto.md  jobs_visualization.drawio
example/: repeat_message_example.py  test_limits_example.py
infra/: nginx.conf
infrastructure/: docker-compose.production.yaml  docker-compose.stage.yaml  docker-compose.test.yaml  docker-compose.yaml
infrastructure(stage)/: deploy_stage.yaml  docker-compose.bot.yaml
infrastructure/nginx/: nginx.conf
logs/: bot-log.txt
requirements/: development.txt  production.txt
src/: api_client.py  api_client_ask_nenaprasno.py  api_client_dataclasses.py  api_client_dumpdata.py  api_client_functions.py  bot.log.2022-07-06  bot.log.2022-07-07  bot.py  bot_menu.py  check_headers_backend.py  constans.py  conversations.py  create_trello_webhook.py  get_timezone.py  jobs.py  limits.py  menu_button.py  middleware.py  run_bot.py  run_polling_api.py  run_webhook.py  run_webhook_api.py  start_conversation.py  texts.py  user_conversation.py  utils.py
src/api/: context_models.py  routes.py
src/bot/: api.py  bot.py  get_timezone.py  jobs.py  menu_button.py
src/constans/: command_constans.py  constans.py  states.py
src/constants/: callback_data.py  command_constants.py  commands.py  error_messages.py  jobs.py  messages.py  states.py  text_constants.py  texts.py  timezone.py
src/conversation/: __init__.py  authorization.py  menu.py  menu_comands.py  menu_commands.py  requests.py  service_police.py  statistic.py  timezone.py
src/core/: __init__.py  config.py  exceptions.py  logger.py  send_message.py  utils.py
src/decorators/: converter.py  debug.py  limits.py  logger.py  safe_conversion.py
src/docs/: bot_architecture.drawio
src/example/: auth_by_site_api_example.py  bill_example.py  delay_function_example.py  repeat_message_example.py  test_limits_example.py  trello_request.json
src/service/: __init__.py  api_client.py  api_client_base.py  api_client_dataclasses.py  bill.py  (+13 more)
tools/: __init__.py  bot.py  logger.py  os_tools.py
(+27 files in other folders)
