[tool.poetry]
name = "Prosto_sprosit_bot"
version = "0.1.0"
description = "Service bot for doctors in \"Prosto sprosit\" team."
readme = "README.md"
authors = [
  "Alexander Butakov <asbutakov@gmail.com>",
  ""
]
license = "The MIT License"
homepage = "https://github.com/Studio-Yandex-Practicum/ask_nenaprasno_bot"
repository = "https://github.com/Studio-Yandex-Practicum/ask_nenaprasno_bot"
documentation = "https://github.com/Studio-Yandex-Practicum/ask_nenaprasno_bot"

[tool.poetry.dependencies]
python = "^3.10"
anyio = "^3.6.1"
APScheduler = "^3.9.1"
asgiref = "^3.5.2"
astroid = "^2.11.6"
cachetools = "^5.2.0"
certifi = "^2022.5.18.1"
cfgv = "^3.3.1"
click = "^8.1.3"
dill = "^0.3.5.1"
distlib = "^0.3.4"
filelock = "^3.7.1"
h11 = "^0.12.0"
httpcore = "^0.15.0"
httpx = "^0.23.0"
identify = "^2.5.1"
idna = "^3.3"
lazy-object-proxy = "^1.7.1"
mccabe = "^0.7.0"
nodeenv = "^1.6.0"
platformdirs = "^2.5.2"
pre-commit = "^2.19.0"
python-dotenv = "^0.19.2"
python-telegram-bot = "^20.0a1"
pytz = "^2022.1"
pytz-deprecation-shim = "^0.1.0.post0"
PyYAML = "^6.0"
rfc3986 = "^1.5.0"
six = "^1.16.0"
sniffio = "^1.2.0"
starlette = "^0.20.2"
toml = "^0.10.2"
tomli = "^2.0.1"
tomlkit = "^0.11.0"
tornado = "^6.1"
tzdata = "^2022.1"
tzlocal = "^4.2"
uvicorn = "^0.17.6"
wrapt = "1.14.1"

[tool.poetry.dev-dependencies]
isort = ">=5.10.1"
virtualenv = ">=20.14.1"
pylint = ">=2.14.2"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
